
* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  'kill --help' now has links to valid anchors in the html manual.
  [bug introduced in coreutils-9.10]

** New Features

  'date --date' now parses dot delimited dd.mm.yy format common in Europe.
  This is in addition to the already supported mm/dd/yy and yy-mm-dd formats.

** Build-related

  ./configure --enable-single-binary=hardlinks is now supported on systems
  with dash as the system shell at /bin/sh.


* Noteworthy changes in release 9.10 (2026-02-04) [stable]

** Bug fixes

  cp, install, and mv no longer enter an infinite loop copying sparse files
  with SEEK_HOLE.  E.g., this was seen on ext4 when copying sparse files with
  extents that are being actively updated, and copy offload is not being used.
  [bug introduced in coreutils-9.9]

  'date' no longer fails with format directives that return an empty string.
  [bug introduced in coreutils-9.9]

  'dd seek=N of=FILE' no longer continues copying, overwriting FILE if it
  exists, if ftruncate fails.
  [bug introduced in coreutils-9.1]

  du and ls no longer modify strings returned by getenv.
  POSIX says this is not portable.
  [bug introduced in fileutils-4.1.6]

  'fmt' now correctly diagnoses read errors.
  Previously fmt generated a generic error for any read error.
  [bug introduced in coreutils-9.0]

  md5sum --text correctly translates CRLF line endings with the MSYS2 runtime.
  This also applies to the sha*sum and b2sum utilities.
  [This bug was present in "the beginning".]

  'numfmt' no longer drops custom suffixes from numbers it cannot fully parse.
  [bug introduced with numfmt in coreutils-8.21]

  'tail -f --pid' can no longer exit upon receiving a non terminating signal.
  On older Linux systems it may have failed with "Interrupted system call".
  [bug introduced in coreutils-7.5]

  'timeout' will now propagate all terminating signals to the monitored command.